--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fonticoncreatepulgin",
+  "name": "fonticon-create-pulgin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
