--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "fonticon-create-plugin",
-  "version": "1.0.0",
-  "description": "",
+  "name": "iconfont-create-plugin",
+  "version": "0.1.0",
+  "description": "a webpack plugin for create icon font",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": {
+    "name": "moujintao",
+    "email": "moujintaotest@163.com",
+    "url": "https://github.com/AlfredMou"
+  },
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.5.6",
