--- a/demo/package.json
+++ b/demo/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "vusion-iconmaker": "^1.0.1",
