--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "url": "https://github.com/AlfredMou"
   },
   "license": "ISC",
+  "devDependencies": {
+    "eslint": "^4.3.0",
+    "eslint-config-vusion": "^1.2.0"
+  },
   "dependencies": {
     "ejs": "^2.5.6",
     "icon-maker": "^0.2.6"
